# ollama_mcp_kun

./: LICENSE  README.md  pyproject.toml
src/ollama_mcp_kun_kosci/: aikun.py  fastapi.py  flask.py
